--- a/.chunkwmrc
+++ b/.chunkwmrc
@@ -25,11 +25,11 @@ chunkc set global_desktop_mode           bsp
 chunkc set 2_desktop_mode                monocle
 chunkc set 5_desktop_mode                float
 
-chunkc set global_desktop_offset_top     10
-chunkc set global_desktop_offset_bottom  10
-chunkc set global_desktop_offset_left    10
-chunkc set global_desktop_offset_right   10
-chunkc set global_desktop_offset_gap     10
+chunkc set global_desktop_offset_top     25
+chunkc set global_desktop_offset_bottom  25
+chunkc set global_desktop_offset_left    25
+chunkc set global_desktop_offset_right   25
+chunkc set global_desktop_offset_gap     25
 
 chunkc set desktop_padding_step_size     10.0
 chunkc set desktop_gap_step_size         5.0
@@ -49,11 +49,11 @@ chunkc set window_region_locked          1
 
 chunkc set mouse_modifier                fn
 
-chunkc set preselect_border_color        0xffd75f5f
+chunkc set preselect_border_color        0xff869099
 chunkc set preselect_border_width        5
 chunkc set preselect_border_radius       0
 
-chunkc set focused_border_color          0xff0f6288
+chunkc set focused_border_color          0xff8a9f97
 chunkc set focused_border_width          5
 chunkc set focused_border_radius         5
 chunkc set focused_border_skip_floating  0
