--- a/.chunkwmrc
+++ b/.chunkwmrc
@@ -66,3 +66,8 @@ chunkc set focused_border_skip_floating  0
 chunkc core::load border.so
 chunkc core::load tiling.so
 chunkc core::load ffm.so
+
+# Rules for the tiling plugin.
+chunkc tiling::rule --owner Finder --name Copy --state float
+chunkc tiling::rule --owner \"App Store\" --state float
+chunkc tiling::rule --owner Anki --state tile
