iTerm2: don't use smart cursor color

--- a/.iTerm2/com.googlecode.iterm2.plist
+++ b/.iTerm2/com.googlecode.iterm2.plist
@@ -1691,7 +1691,7 @@
 			<key>Silence Bell</key>
 			<false/>
 			<key>Smart Cursor Color</key>
-			<true/>
+			<false/>
 			<key>Sync Title</key>
 			<true/>
 			<key>Tags</key>
