--- a/.iTerm2/com.googlecode.iterm2.plist
+++ b/.iTerm2/com.googlecode.iterm2.plist
@@ -12,263 +12,7 @@
 	<string>manual</string>
 	<key>Custom Color Presets</key>
 	<dict>
-		<key>base16-grayscale-dark-256</key>
-		<dict>
-			<key>Ansi 0 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.062745099999999998</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.062745099999999998</real>
-				<key>Red Component</key>
-				<real>0.062745099999999998</real>
-			</dict>
-			<key>Ansi 1 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.4862745</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.4862745</real>
-				<key>Red Component</key>
-				<real>0.4862745</real>
-			</dict>
-			<key>Ansi 10 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.55686279999999999</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.55686279999999999</real>
-				<key>Red Component</key>
-				<real>0.55686279999999999</real>
-			</dict>
-			<key>Ansi 11 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.62745099999999998</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.62745099999999998</real>
-				<key>Red Component</key>
-				<real>0.62745099999999998</real>
-			</dict>
-			<key>Ansi 12 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.40784313999999999</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.40784313999999999</real>
-				<key>Red Component</key>
-				<real>0.40784313999999999</real>
-			</dict>
-			<key>Ansi 13 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.45490195999999999</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.45490195999999999</real>
-				<key>Red Component</key>
-				<real>0.45490195999999999</real>
-			</dict>
-			<key>Ansi 14 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.52549020000000002</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.52549020000000002</real>
-				<key>Red Component</key>
-				<real>0.52549020000000002</real>
-			</dict>
-			<key>Ansi 15 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.96862744999999995</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.96862744999999995</real>
-				<key>Red Component</key>
-				<real>0.96862744999999995</real>
-			</dict>
-			<key>Ansi 2 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.55686279999999999</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.55686279999999999</real>
-				<key>Red Component</key>
-				<real>0.55686279999999999</real>
-			</dict>
-			<key>Ansi 3 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.62745099999999998</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.62745099999999998</real>
-				<key>Red Component</key>
-				<real>0.62745099999999998</real>
-			</dict>
-			<key>Ansi 4 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.40784313999999999</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.40784313999999999</real>
-				<key>Red Component</key>
-				<real>0.40784313999999999</real>
-			</dict>
-			<key>Ansi 5 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.45490195999999999</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.45490195999999999</real>
-				<key>Red Component</key>
-				<real>0.45490195999999999</real>
-			</dict>
-			<key>Ansi 6 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.52549020000000002</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.52549020000000002</real>
-				<key>Red Component</key>
-				<real>0.52549020000000002</real>
-			</dict>
-			<key>Ansi 7 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.72549019999999997</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.72549019999999997</real>
-				<key>Red Component</key>
-				<real>0.72549019999999997</real>
-			</dict>
-			<key>Ansi 8 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.32156864000000002</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.32156864000000002</real>
-				<key>Red Component</key>
-				<real>0.32156864000000002</real>
-			</dict>
-			<key>Ansi 9 Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.4862745</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.4862745</real>
-				<key>Red Component</key>
-				<real>0.4862745</real>
-			</dict>
-			<key>Background Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.062745099999999998</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.062745099999999998</real>
-				<key>Red Component</key>
-				<real>0.062745099999999998</real>
-			</dict>
-			<key>Bold Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.72549019999999997</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.72549019999999997</real>
-				<key>Red Component</key>
-				<real>0.72549019999999997</real>
-			</dict>
-			<key>Cursor Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.72549019999999997</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.72549019999999997</real>
-				<key>Red Component</key>
-				<real>0.72549019999999997</real>
-			</dict>
-			<key>Cursor Text Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.062745099999999998</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.062745099999999998</real>
-				<key>Red Component</key>
-				<real>0.062745099999999998</real>
-			</dict>
-			<key>Foreground Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.72549019999999997</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.72549019999999997</real>
-				<key>Red Component</key>
-				<real>0.72549019999999997</real>
-			</dict>
-			<key>Selected Text Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.72549019999999997</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.72549019999999997</real>
-				<key>Red Component</key>
-				<real>0.72549019999999997</real>
-			</dict>
-			<key>Selection Color</key>
-			<dict>
-				<key>Blue Component</key>
-				<real>0.27450982000000002</real>
-				<key>Color Space</key>
-				<string>sRGB</string>
-				<key>Green Component</key>
-				<real>0.27450982000000002</real>
-				<key>Red Component</key>
-				<real>0.27450982000000002</real>
-			</dict>
-		</dict>
-		<key>base16-tomorrow-night-256</key>
+		<key>base16-tomorrow-night</key>
 		<dict>
 			<key>Ansi 0 Color</key>
 			<dict>
@@ -295,57 +39,57 @@
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40784313999999999</real>
+				<real>0.18039216</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.74117650000000002</real>
+				<real>0.16470588999999999</real>
 				<key>Red Component</key>
-				<real>0.70980394000000002</real>
+				<real>0.15686275</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45490195999999999</real>
+				<real>0.25490197999999997</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.77647060000000001</real>
+				<real>0.23137255000000001</real>
 				<key>Red Component</key>
-				<real>0.94117649999999997</real>
+				<real>0.21568628000000001</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.74509804999999996</real>
+				<real>0.70588240000000002</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.63529413999999995</real>
+				<real>0.71764709999999998</real>
 				<key>Red Component</key>
-				<real>0.50588239999999995</real>
+				<real>0.70588240000000002</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334999999999</real>
+				<real>0.87843139999999997</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.58039220000000002</real>
+				<real>0.87843139999999997</real>
 				<key>Red Component</key>
-				<real>0.69803923000000001</real>
+				<real>0.87843139999999997</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.71764709999999998</real>
+				<real>0.35294120000000001</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.74509804999999996</real>
+				<real>0.40784313999999999</real>
 				<key>Red Component</key>
-				<real>0.54117649999999995</real>
+				<real>0.63921570000000005</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -438,13 +182,13 @@
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40000000000000002</real>
+				<real>0.37254903</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.40000000000000002</real>
+				<real>0.57647060000000006</real>
 				<key>Red Component</key>
-				<real>0.80000000000000004</real>
+				<real>0.87058824000000001</real>
 			</dict>
 			<key>Background Color</key>
 			<dict>
@@ -930,11 +674,11 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>492 265 445 318 0 0 1920 1080 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>462 599 796 473 0 0 1920 1080 </string>
+	<string>462 602 796 473 0 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>10 14 944 517 0 0 1920 1080 </string>
+	<string>10 17 944 1045 0 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>965 15 944 1049 0 0 1920 1080 </string>
+	<string>965 17 944 1045 0 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>26 554 446 499 0 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
@@ -1617,57 +1361,57 @@
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40784313999999999</real>
+				<real>0.18039216</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.74117650000000002</real>
+				<real>0.16470588999999999</real>
 				<key>Red Component</key>
-				<real>0.70980394000000002</real>
+				<real>0.15686275</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45490195999999999</real>
+				<real>0.25490197999999997</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.77647060000000001</real>
+				<real>0.23137255000000001</real>
 				<key>Red Component</key>
-				<real>0.94117649999999997</real>
+				<real>0.21568628000000001</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.74509804999999996</real>
+				<real>0.70588240000000002</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.63529413999999995</real>
+				<real>0.71764709999999998</real>
 				<key>Red Component</key>
-				<real>0.50588239999999995</real>
+				<real>0.70588240000000002</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334999999999</real>
+				<real>0.87843139999999997</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.58039220000000002</real>
+				<real>0.87843139999999997</real>
 				<key>Red Component</key>
-				<real>0.69803923000000001</real>
+				<real>0.87843139999999997</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.71764709999999998</real>
+				<real>0.35294120000000001</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.74509804999999996</real>
+				<real>0.40784313999999999</real>
 				<key>Red Component</key>
-				<real>0.54117649999999995</real>
+				<real>0.63921570000000005</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -1760,13 +1504,13 @@
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40000000000000002</real>
+				<real>0.37254903</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.40000000000000002</real>
+				<real>0.57647060000000006</real>
 				<key>Red Component</key>
-				<real>0.80000000000000004</real>
+				<real>0.87058824000000001</real>
 			</dict>
 			<key>BM Growl</key>
 			<true/>
@@ -2199,7 +1943,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>SourceCodePro-Regular 11</string>
+			<string>Menlo-Regular 12</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<true/>
 			<key>Option Key Sends</key>
@@ -2279,7 +2023,7 @@
 			<key>Use Underline Color</key>
 			<false/>
 			<key>Vertical Spacing</key>
-			<real>1</real>
+			<real>1.2000000000000002</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
