--- a/.iTerm2/com.googlecode.iterm2.plist
+++ b/.iTerm2/com.googlecode.iterm2.plist
@@ -2011,7 +2011,7 @@
 			<key>Use Bold Font</key>
 			<true/>
 			<key>Use Bright Bold</key>
-			<true/>
+			<false/>
 			<key>Use Cursor Guide</key>
 			<false/>
 			<key>Use Italic Font</key>
