--- a/.iTerm2/com.googlecode.iterm2.plist
+++ b/.iTerm2/com.googlecode.iterm2.plist
@@ -1943,7 +1943,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Menlo-Regular 12</string>
+			<string>Menlo-Regular 11</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<true/>
 			<key>Option Key Sends</key>
@@ -2023,7 +2023,7 @@
 			<key>Use Underline Color</key>
 			<false/>
 			<key>Vertical Spacing</key>
-			<real>1.2000000000000002</real>
+			<real>1.2070606645331325</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
@@ -2041,7 +2041,7 @@
 	<key>NoSyncInstallationId</key>
 	<string>E359D79E-A7F9-4355-B95B-DBDF94E0E3CA</string>
 	<key>NoSyncLastTipTime</key>
-	<real>545814699.683146</real>
+	<real>545901230.45064402</real>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
@@ -2057,6 +2057,7 @@
 		<string>0001</string>
 		<string>0002</string>
 		<string>0003</string>
+		<string>0004</string>
 	</array>
 	<key>PointerActions</key>
 	<dict>
