goldencheetah: use default location of user data dir

--- a/.config/goldencheetah.org/GoldenCheetah.ini
+++ b/.config/goldencheetah.org/GoldenCheetah.ini
@@ -100,7 +100,6 @@ HRCOLORZONE9=160:160:164
 chrome=Flat
 embedPython=false
 embedR=false
-homedirectory=/Users/david/Documents/GoldenCheetah
 pythonhome=
 r_home=
 starthttp=false
@@ -119,7 +118,7 @@ titles="Lucida Grande,10,-1,5,50,0,0,0,0,0"
 titlessize=9
 
 [mainwindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\n\0\0\0 \0\0\au\0\0\x4-\0\0\0\n\0\0\0\x36\0\0\au\0\0\x4-\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0\0\0\0\x5\x9f\0\0\x3\x83\0\0\0\0\0\0\0\x16\0\0\x5\x9f\0\0\x3\x83\0\0\0\0\x2\0\0\0\x5\xa0)
 lastImportPath=/Users/david/Downloads
 lastOpened=David
-state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\al\0\0\x3\xf8\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
+state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x5\xa0\0\0\x3n\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
