--- a/.jrnl_config
+++ b/.jrnl_config
@@ -7,7 +7,7 @@
   "default_minute": 0, 
   "highlight": true, 
   "journals": {
-    "default": "/Users/david/journal/journal.txt"
+    "default": "~/journal/journal.txt"
   }, 
   "tagsymbols": "@"
 }
