Add ~/.aws/ (except credentials)

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@
 /.CFUserTextEncoding
 /.Trash
 /.atom
+/.aws/credentials
 /.base16-manager
 /.base16_theme
-/.vimrc_background
 /.bash_history
 /.bash_sessions
 /.bundle
@@ -30,10 +30,11 @@
 /.rvm
 /.ssh
 /.v8flags.*
-/.viminfo
 /.vim/.netrwhist
 /.vim/plugged
 /.vim/spell
+/.viminfo
+/.vimrc_background
 /.wget-hsts
 /.wpm.csv
 /Applications
