Make Preview work with chunkwm

--- a/.chunkwmrc
+++ b/.chunkwmrc
@@ -71,3 +71,4 @@ chunkc core::load ffm.so
 chunkc tiling::rule --owner Finder --name Copy --state float
 chunkc tiling::rule --owner \"App Store\" --state float
 chunkc tiling::rule --owner Anki --state tile
+chunkc tiling::rule --owner Preview --state tile
