--- a/.chunkwmrc
+++ b/.chunkwmrc
@@ -69,6 +69,6 @@ chunkc core::load ffm.so
 
 # Rules for the tiling plugin.
 chunkc tiling::rule --owner Finder --name Copy --state float
-chunkc tiling::rule --owner \"App Store\" --state float
+chunkc tiling::rule --owner "App Store" --state float
 chunkc tiling::rule --owner Anki --state tile
 chunkc tiling::rule --owner Preview --state tile
