--- a/.skhdrc
+++ b/.skhdrc
@@ -66,7 +66,7 @@ shift + ctrl + alt - n : chunkc tiling::window --swap east
 ctrl + alt - r : chunkc tiling::desktop --rotate 90
 
 # Open applications
-ctrl - return : osascript -e 'tell application "iTerm2" to create window with default profile'
+ctrl - return : osascript -e 'tell application "Terminal" to do script ""'
 hyper - a : open /Applications/Anki.app
 hyper - c : open '/Applications/Google Chrome.app'
 hyper - g : open /Applications/GoldenCheetah.app
