Install and use vim colour scheme 'apprentice'

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/pack/dporter/start/vim-repeat"]
 	path = .vim/pack/dporter/start/vim-repeat
 	url = https://github.com/tpope/vim-repeat.git
+[submodule ".vim/pack/dporter/start/apprentice"]
+	path = .vim/pack/dporter/start/apprentice
+	url = https://github.com/romainl/Apprentice.git
