--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 /.bash_history
 /.bash_sessions
 /.bundle
+/.cache
 /.config/*
 /.docker
 /.dropbox
@@ -45,6 +46,7 @@
 /.viminfo
 /.vimrc_background
 /.virtualenvs
+/.vnc
 /.wget-hsts
 /.wpm.csv
 /Applications
