--- a/.config/goldencheetah.org/GoldenCheetah.ini
+++ b/.config/goldencheetah.org/GoldenCheetah.ini
@@ -100,6 +100,7 @@ HRCOLORZONE9=160:160:164
 chrome=Flat
 embedPython=false
 embedR=false
+homedirectory=~/Dropbox/GoldenCheetah
 pythonhome=
 r_home=
 starthttp=false
