--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/pack/dporter/start/apprentice"]
 	path = .vim/pack/dporter/start/apprentice
 	url = https://github.com/romainl/Apprentice.git
+[submodule ".vim/pack/dporter/start/wal"]
+	path = .vim/pack/dporter/start/wal
+	url = https://github.com/dylanaraps/wal.vim.git
