chunkwm: use 'wal' for color theming
Also, make window padding larger.

--- a/.chunkwmrc
+++ b/.chunkwmrc
@@ -25,13 +25,13 @@ chunkc set global_desktop_mode           bsp
 chunkc set 2_desktop_mode                monocle
 chunkc set 5_desktop_mode                float
 
-chunkc set global_desktop_offset_top     0
-chunkc set global_desktop_offset_bottom  0
-chunkc set global_desktop_offset_left    0
-chunkc set global_desktop_offset_right   0
-chunkc set global_desktop_offset_gap     5
+chunkc set global_desktop_offset_top     30
+chunkc set global_desktop_offset_bottom  30
+chunkc set global_desktop_offset_left    30
+chunkc set global_desktop_offset_right   30
+chunkc set global_desktop_offset_gap     10
 
-chunkc set desktop_padding_step_size     10.0
+chunkc set desktop_padding_step_size     15.0
 chunkc set desktop_gap_step_size         5.0
 
 chunkc set bsp_spawn_left                1
@@ -49,12 +49,12 @@ chunkc set window_region_locked          1
 
 chunkc set mouse_modifier                fn
 
-chunkc set preselect_border_color        0xff869099
-chunkc set preselect_border_width        0
+# chunkc set preselect_border_color        0xff869099
+chunkc set preselect_border_width        4
 chunkc set preselect_border_radius       0
 
-chunkc set focused_border_color          0xff2f2f2f
-chunkc set focused_border_width          0
+# chunkc set focused_border_color          0xff2f2f2f
+chunkc set focused_border_width          4
 chunkc set focused_border_radius         0
 chunkc set focused_border_skip_floating  0
 
@@ -77,3 +77,15 @@ chunkc tiling::rule --owner "App Store" --state float
 chunkc tiling::rule --owner Anki --state tile
 chunkc tiling::rule --owner Preview --state tile
 chunkc tiling::rule --owner mpv --state float
+
+# Load setting from 'wal'.
+source .cache/wal/chunkwmcolors
+
+NFOCUS=$(echo $FOCUS | sed 's/#//')
+NPRESE=$(echo $PRESE | sed 's/#//')
+
+echo NFOCUS: $NFOCUS
+echo NPRESE: $NPRESE
+
+chunkc set preselect_border_color        $NPRESE
+chunkc set focused_border_color          $NFOCUS
