vim: add colorscheme nord and use black for python

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule ".vim/pack/dporter/start/wal"]
 	path = .vim/pack/dporter/start/wal
 	url = https://github.com/dylanaraps/wal.vim.git
+[submodule ".vim/pack/dporter/start/black"]
+	path = .vim/pack/dporter/start/black
+	url = https://github.com/ambv/black.git
+[submodule ".vim/pack/dporter/start/nord-vim"]
+	path = .vim/pack/dporter/start/nord-vim
+	url = git://github.com/arcticicestudio/nord-vim.git
