vim: add more python compilers

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule ".vim/pack/dporter/start/nord-vim"]
 	path = .vim/pack/dporter/start/nord-vim
 	url = git://github.com/arcticicestudio/nord-vim.git
+[submodule ".vim/pack/dporter/start/compiler-pytest"]
+	path = .vim/pack/dporter/start/compiler-pytest
+	url = https://github.com/5long/pytest-vim-compiler.git
+[submodule ".vim/pack/dporter/start/python-compilers"]
+	path = .vim/pack/dporter/start/python-compilers
+	url = https://github.com/drgarcia1986/python-compilers.vim.git
