--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule ".vim/pack/dporter/start/compiler-pytest"]
 	path = .vim/pack/dporter/start/compiler-pytest
 	url = https://github.com/5long/pytest-vim-compiler.git
+[submodule ".vim/pack/dporter/start/base16-vim"]
+	path = .vim/pack/dporter/start/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
