Use Neomake with Vim
Like Neoformat, Neomake makes it possible to run multiple :make programs
with a single invocation.

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".vim/pack/dporter/start/neoformat"]
 	path = .vim/pack/dporter/start/neoformat
 	url = https://github.com/sbdchd/neoformat.git
+[submodule ".vim/pack/dporter/start/neomake"]
+	path = .vim/pack/dporter/start/neomake
+	url = https://github.com/neomake/neomake.git
