Enable sending and receiving data61 email
This change configures mbsync, mutt, and msmtp to access both my
gmail and data61 accounts.

--- a/.msmtprc
+++ b/.msmtprc
@@ -9,4 +9,10 @@ account personal
 host smtp.gmail.com
 user david.a.porter@gmail.com
 from david.a.porter@gmail.com
-passwordeval /usr/bin/security find-internet-password -w -a david.a.porter@gmail.com -s smtp.gmail.com ~/Library/Keychains/login.keychain
+passwordeval /usr/bin/security find-internet-password -s imap.gmail.com -a david.a.porter -w
+
+account data61
+host smtp-auth.csiro.au
+user por085@csiro.au
+from david.porter@data61.csiro.au
+passwordeval /usr/bin/security find-internet-password -s smtp-auth.csiro.au -a por085@csiro.au -w
