Prevent Kitty from showing title bar

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -554,7 +554,7 @@ macos_titlebar_color background
 #: you are probably better off just hiding the titlebar with
 #: macos_hide_titlebar.
 
-# macos_hide_titlebar yes
+macos_hide_titlebar yes
 
 #: Hide the kitty window's title bar on macOS.
 
@@ -661,7 +661,7 @@ macos_option_as_alt yes
 
 #:     map ctrl+f>2 set_font_size 20
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift+alt
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
@@ -755,6 +755,7 @@ macos_option_as_alt yes
 # map cmd+n       new_os_window
 # map kitty_mod+n new_os_window
 # map kitty_mod+w close_window
+map kitty_mod+w
 # map kitty_mod+] next_window
 # map kitty_mod+[ previous_window
 # map kitty_mod+f move_window_forward
