Make the Kitty theme follow the Open Color scheme
This makes slight changes the theme's colours in order to follow the
Open Color scheme. I think the Open Color scheme looks better than my
previous theme.

https://yeun.github.io/open-color/

--- a/.config/kitty/theme-dporter.conf
+++ b/.config/kitty/theme-dporter.conf
@@ -1,39 +1,39 @@
-# My colour scheme.  It is based on the Base16 Guidelines and it uses the
-# colours from the Wikimedia Design Style Guide.
+# My colour scheme.  It is based on the Base16 Guidelines and the Open Color
+# colour scheme.
 #
 # - http://chriskempson.com/projects/base16/
-# - https://j4n-co.github.io/wikimedia-styleguide-hugo-test/visual-style/colors/
+# - https://yeun.github.io/open-color/
 
 background            #ffffff
-foreground            #222222
-cursor                #b32424
-selection_background  #eaf3ff
+foreground            #343a40
+cursor                #c92a2a
+selection_background  #e7f5ff
 
-# color1 black
-# color2 red
-# color3 green
-# color4 yellow
-# color5 blue
-# color6 magenta
-# color7 cyan
-# color8 white
-color0  #222222
-color1  #b32424
-color2  #14866d
-color3  #ac6600
-color4  #2a4b8d
-color5  #8d6a9f
-color6  #028090
+# color0 black
+# color1 red
+# color2 green
+# color3 yellow
+# color4 blue
+# color5 magenta
+# color6 cyan
+# color7 white
+color0  #343a40
+color1  #c92a2a
+color2  #2b8a3e
+color3  #e67700
+color4  #1864ab
+color5  #862e9c
+color6  #0b7285
 color7  #ffffff
 
 # Pastels
-color8   #eaf3ff
-color9   #fef6e7
-color10  #d5fdf4
+color8   #e7f5ff
+color9   #fff5f5
+color10  #ebfbee
 
 # Greys
-color11  #54595d
-color12  #72777d
-color13  #a2a9b1
-color14  #c8ccd1
-color15  #eaecf0
+color11  #495057
+color12  #868e96
+color13  #adb5bd
+color14  #ced4da
+color15  #dee2e6
