kitty: swap color7 and color15
This makes colours white and brightwhite correct.

--- a/.config/kitty/theme-dporter.conf
+++ b/.config/kitty/theme-dporter.conf
@@ -4,6 +4,10 @@
 # - http://chriskempson.com/projects/base16/
 # - https://yeun.github.io/open-color/
 
+font_family        Luxi Mono
+font_size          11.0
+adjust_line_height 140%
+
 background            #ffffff
 foreground            #343a40
 cursor                #c92a2a
@@ -24,7 +28,7 @@ color3  #e67700
 color4  #1864ab
 color5  #862e9c
 color6  #0b7285
-color7  #ffffff
+color7  #dee2e6
 
 color8  #495057
 color9   #ffe3e3
@@ -34,4 +38,4 @@ color11  #868e96
 color12  #e7f5ff
 color13  #adb5bd
 color14  #ced4da
-color15  #dee2e6
+color15  #ffffff
