--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@ include ./theme.conf
 # italic_font      DejaVu Sans Mono Oblique
 # bold_italic_font DejaVu Sans Mono Bold Oblique
 
-font_family      Luxi Mono
+# font_family      Luxi Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -27,9 +27,8 @@ font_family      Luxi Mono
 #:     bold_italic_font Operator Mono Medium Italic
 
 #: Font size (in pts)
-font_size 11.0
+# font_size 11.0
 
-adjust_line_height 140%
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
